--- a/profil.html
+++ b/profil.html
@@ -64,7 +64,7 @@
                     <p>-Mener des missions d’interfaces, de coordination et d’organisation dans le domaine administatif</p>
                     <p>-Rechercher,produire et communiquer de l’information afin de résoudre des problèmes</p>
                     <p>-Travailler en mode projet au sein d’une équipe</p>
-                    <p>-Agir en adoptant une attitude éthique et citoyenne, prenant en compte des préoccupations relatives a la Responsabilité Sociétale des Entreprises et des Organisations (RSE)</p>
+                    <p>-Agir en adoptant une attitude éthique et citoyenne, prenant en compte des préoccupations relatives à la Responsabilité Sociétale des Entreprises et des Organisations (RSE)</p>
                 </div>
             </div>
         </div>
