--- a/remerciement.html
+++ b/remerciement.html
@@ -54,7 +54,7 @@
     <img class="Ellipse_40" src="data/css/remerciement/Ellipse_40.png" alt="">
     <div class="card card_SAM_page" >
         <div class="card-SAM-body">
-            <h5 class="card-SAM">Ce site a etait<br>réalisé par la<br>filière SAM1<br>du lycée<br>Montplaisir</h5>
+            <h5 class="card-SAM">Ce site a été<br>réalisé par la<br>filière SAM1<br>du lycée<br>Montplaisir</h5>
         </div>
     </div>
 </div>
