--- a/profil.html
+++ b/profil.html
@@ -37,7 +37,7 @@
                     <p>-Bac pro : 6</p>
                     <p>-Bac STMG : 12</p>
                     <p>-Bac ST2S : 1</p>
-                    <p>-Général : 4</p>
+                    <p>-Bac Général : 4</p>
                     <p>-Réorientation : 10</p>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                     <p>2ème année (2019/2020) :</p>
                     <p>-Bac pro : 1</p>
                     <p>-Bac STMG : 8</p>
-                    <p>-BAC général : 2</p>
+                    <p>-Bac général : 2</p>
                     <p>-Réorientation : 5</p>
                 </div>
             </div>
@@ -60,11 +60,11 @@
             <div class="card card_paragraphe" >
                 <div class="card-bodyparagraphe">
                     <p>-Apporter un appui à un ou plusieurs cadres</p>
-                    <p>-Assurer la gestion des dossiers contribuer à l’amélioration des processus administratifs</p>
+                    <p>-Assurer la gestion des dossiers et contribuer à l’amélioration des processus administratifs</p>
                     <p>-Mener des missions d’interfaces, de coordination et d’organisation dans le domaine administatif</p>
                     <p>-Rechercher, produire et communiquer l’information afin de résoudre des problèmes</p>
-                    <p>-Travailler en mode projet au sein d’une équipe</p>
-                    <p>-Agir en adoptant une attitude éthique et citoyenne, prenant en compte des préoccupations relatives à la Responsabilité Sociétale des Entreprises et des Organisations (RSE)</p>
+                    <p>-Travailler en groupe projet </p>
+                    <p>-Agir en adoptant une attitude éthique et citoyenne, prenant en compte des préoccupations relatives à la Responsabilité Sociétale des Entreprises (RSE)</p>
                 </div>
             </div>
         </div>
