--- a/stages.html
+++ b/stages.html
@@ -49,12 +49,12 @@
         <div class="col-sm-4 col-md-4 col-lg-4 d-flex justify-content-center">
             <div class="card card-juin-body justify-content-center" >
                 <div class="card-juin">
-                    <p>  Stage en mai juin 
+                    <p>  Stage en mai-juin 
                         de 9 semaines dans
                          un pays étranger ou
                         8 semaines en France
                         dans une entreprise
-                        internationale<br>( 1 ère
+                        internationale<br>(1 ère
                         année) </p>
                 </div>
             </div>
@@ -70,11 +70,11 @@
     </div> 
     <div class="container-fluid row para">
         <div class="col-sm-6 col-md-5 col-lg-6">
-            <p>Les périodes de stage en milieu professionnel doivent permettre à l'étudiante ou à l'étudiant :</p>
-            <p>•	de développer des qualités relationnelles, des attitudes, des comportements, des postures professionnelles </p>
+            <p>Les périodes de stage en milieu professionnel doivent permettre à l'étudiant(e) :</p>
+            <p>•	De développer des qualités relationnelles, des attitudes, des comportements et des postures professionnelles </p>
         </div>
         <div class="col-sm-6 col-md-5 col-lg-6">
-            <p>•	de conduire des activités qui pourront servir de support pour les épreuves du BTS relevant des blocs 
+            <p>•	De conduire des activités qui pourront servir de support pour les épreuves du BTS relevant des blocs 
                 « optimisation des processus administratifs » et « gestion de projet »</p>
         </div>
     </div>
