--- a/remerciement.html
+++ b/remerciement.html
@@ -14,7 +14,7 @@
     <img class="Ellipse_21" src="data/css/remerciement/Ellipse_21.png" alt="">
     <div class="card card_page" >
         <div class="card-body">
-            <h5 class="card-profil">Remerciement</h5>
+            <h5 class="card-profil">Remerciements</h5>
         </div>
     </div>
 
@@ -32,7 +32,7 @@
 
             <div class="col-sm-7 col-md-7 col-lg-7 p2">
                 <p>Le commerce équitable c’est quoi ? </p>
-                <p> C’est de construire un modèle économique mondial juste 
+                <p> C’est de construire un modèle économique mondial
                     en replaçant l’humain et la biodiversité au centre des
                      préoccupations. Artisans du monde établit des partenariats
                      avec les pays du sud, achète des produits à ces petits<br>
